# IT-Hell

./: .gitignore  CLAUDE.md  README.md  compose.yaml  package-lock.json
backend/: .env_template  Backend.md  Dockerfile  README.md  backend.md  pyproject.toml  worker.md
backend/src/: db.py
backend/src/alembic/: env.py
backend/src/api/: cv_router.py  main.py  schemas.py
backend/src/core/: db.py  exceptions.py  security.py  settings.py
backend/src/models/: __init__.py  job_offers.py  lookups.py  users.py
backend/src/repositories/: job_offers.py  lookups.py  users.py
backend/src/schemas/: job_offers.py  lookups.py  users.py
backend/src/services/: auth_service.py  cv_service.py  job_offers_service.py  lookups_service.py  tech_extractor.py  user_profiles_service.py
backend/tests/: conftest.py
backend/tests/repositories/: test_job_offers.py  test_lookups.py  test_users.py
backend/tests/routers/: test_cv.py  test_job_offers.py  test_lookups.py  test_users.py
backend/tests/services/: test_auth_service.py  test_cv_service.py  test_job_offers_service.py  test_lookups_service.py  test_tech_extractor.py  test_user_profiles_service.py
backend/tests_worker/: test_job_offers.py  test_main.py  test_normalize.py  test_pipeline.py
backend/worker/: job_offers.py  lookups.py  main.py  pipeline.py
backend/worker/core/: deps.py  (+1 more)
scrapers/: .env_template  Dockerfile  README.md  app-config.yaml  main.py  pyproject.toml
scrapers/pracuj_pl/: helpers.py  main.py  schemas.py  scraper.py
scrapers/src/: schemas.py
scrapers/tests/: conftest.py  test_helpers.py
(+146 files in other folders)
